Fix video (will break in older browsers though)

--- a/source/stylesheets/app.scss
+++ b/source/stylesheets/app.scss
@@ -65,6 +65,15 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Old Standard TT', serif;
 }
 
-.outline-2 {
+.outline-2 .outline-3 {
     margin-bottom: 60px;
+}
+
+video {
+    width: 100%;
+    height: auto;
+}
+
+#content p {
+    font-size: 0.8em;
 }
